<resources>
    <string name="app_name">Ocean Notes</string>
    <string name="search_hint">Search notes…</string>
    <string name="empty_notes">No notes yet. Tap + to create one.</string>
    <string name="add_note">Add note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Write your note…</string>
    <string name="updated_prefix">Updated</string>
    <string name="clear_search">Clear search</string>
</resources>
